tests/negative/gold/return_missing_test.gold
tests/negative/return_missing_test.toit:51:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/return_missing_test.toit:37:12: error: Logical operation argument can't be 'none'
  arg and (return 499)
           ^~~~~~
tests/negative/return_missing_test.toit:40:11: error: Logical operation argument can't be 'none'
  arg or (return 499)
          ^~~~~~
tests/negative/return_missing_test.toit:12:1: error: Method doesn't return a value
test1 -> any:
^~~~~
tests/negative/return_missing_test.toit:14:1: error: Method doesn't return a value on all paths
test2:
^~~~~
tests/negative/return_missing_test.toit:18:1: error: Method doesn't return a value on all paths
test3:
^~~~~
tests/negative/return_missing_test.toit:24:1: error: Method doesn't return a value on all paths
test4:
^~~~~
tests/negative/return_missing_test.toit:28:1: error: Method doesn't return a value on all paths
test5:
^~~~~
tests/negative/return_missing_test.toit:32:1: error: Method doesn't return a value on all paths
test6 -> any:
^~~~~
tests/negative/return_missing_test.toit:36:1: error: Method doesn't return a value on all paths
test7 arg -> any:
^~~~~
tests/negative/return_missing_test.toit:39:1: error: Method doesn't return a value on all paths
test8 arg -> any:
^~~~~
Compilation failed.
